--- a/XYZReader/src/main/res/layout/fragment_article_detail_new.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail_new.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    >
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
@@ -121,7 +121,8 @@
         android:elevation="@dimen/fab_elevation"
         android:src="@drawable/ic_share"
         android:stateListAnimator="@anim/fab_state_list_anim"
-        app:backgroundTint="@color/theme_accent"
+        app:pressedTranslationZ="@dimen/fab_press_translation_z"
+        app:layout_behavior="com.example.xyzreader.utils.ScrollingFABBehavior"
         app:layout_anchor="@id/scrollview"
         app:layout_anchorGravity="bottom|right|end"/>
 
